<resources>
    <string name="app_name">Vegetariano Fuerte</string>
    <string name="recetas">Recipes</string>
    <string name="nav_recetas">Recipes</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_shop">Shopping List</string>
    <string name="nav_log_out">Log Out</string>
    <string name="nav_profile">Profile</string>
    <string name="open_menu">Recipes Options</string>
    <string name="close_menu">Closed Options</string>
    <string name="texto_vegetariano_fuerte">Vegetariano Fuerte</string>
    <string name="appetizers">Appetizers</string>
    <string name="bread_and_cookies">Bread and Cookies</string>
    <string name="desserts">Desserts</string>
    <string name="main_dishes">Main Dishes</string>
    <string name="pastas">Pastas</string>
    <string name="soups">Soups</string>
    <string name="salads">Salads</string>
    <string name="category">Category</string>
    <string name="filter">Filter</string>
    <string name="type">Type</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

<<<<<<< HEAD
    <string name="http_error_404">Recurso no encontrado</string>
    <string name="http_error_server">Erro en Servidor</string>
    <string name="http_error_internet">Sin Conexion a internet</string>
    <string name="http_error_timeout">El servidor no responde</string>
    <string name="login_usr">Usuario</string>
    <string name="login_pass">Password</string>
    <string name="login_nom">Nombre</string>
    <string name="login_email">Email</string>

    <string name="login_error">Usuario o password incorrecto</string>
    <string name="reg_error">El usuario ya existe</string>
    <string name="reg_success">Registro Exitoso</string>
=======
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> 0ed76dcffc948ddeefc774115983e1b3c62ba366
</resources>
