<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_filtro"
        android:title="@string/filter"
        android:icon="@drawable/ic_filtro"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/filtro_tipo"
                android:title="@string/type">
                <menu>
                    <item
                        android:id="@+id/filtro_vegetariana"
                        android:title="@string/vegetarian"/>
                    <item
                        android:id="@+id/filtro_vegana"
                        android:title="@string/vegan"/>
                </menu>
            </item>
        </menu>
    </item>
</menu>